--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,7 @@ const { title } = Astro.props;
 	/* Remove default margin in favour of better control in authored CSS */
 	body, h1, h2, h3, h4, p,
 	figure, blockquote, dl, dd {
+		margin: 0;
 		margin-block-end: 0;
 	}
 
